# Laptops

./: .gitignore  laptops.csv  laptops.ipynb  laptops_rev2.ipynb  pyproject.toml  sources.txt
