[tool.poetry]
name = "laptops"
version = "0.1.0"
description = ""
authors = ["Oleksii Kutsenko <kutsenko.new@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
