[tool.poetry]
name = "laptops"
version = "0.1.0"
description = ""
authors = ["Oleksii Kutsenko <kutsenko.new@gmail.com>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
jupyterlab = "^4.3.6"
jupyter-black = "^0.4.0"
plotly = "^6.3.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

